--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
   <!-- Icons: Font Awesome by Dave Gandy - http://fontawesome.io -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109579126-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109579126-1');
+</script>
 </head>
 
 <style>
