- Updated LinkedIn profile link.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
   <!-- Icons: Font Awesome by Dave Gandy - http://fontawesome.io -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109579126-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109579126-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'UA-109579126-1');
-</script>
+    gtag('config', 'UA-109579126-1');
+  </script>
 </head>
 
 <style>
@@ -46,7 +46,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large burak-text-color"></i>Research Assistant at <a href="https://parcorelab.ku.edu.tr/" target="_blank">Koç University ParCoreLab</a></p>
             <p><i class="fa fa-fw w3-margin-right w3-large"></i>Teaching Assistant at <a href="https://www.ku.edu.tr/en/" target="_blank">Koç University</a></p>
             <p><a href="mailto:burakbastem@hotmail.com"><i class="fa fa-envelope fa-fw w3-margin-right burak-text-color"></i>burakbastem@hotmail.com</a></p>
-            <p><a href="https://tr.linkedin.com/in/burakbastem/" target="_blank"><i class="fa fa-linkedin fa-fw w3-margin-right w3-large burak-text-color"></i>burakbastem</a></p>
+            <p><a href="https://www.linkedin.com/in/burakbastem/" target="_blank"><i class="fa fa-linkedin fa-fw w3-margin-right w3-large burak-text-color"></i>burakbastem</a></p>
             <p><a href="https://github.com/burakbastem/" target="_blank"><i class="fa fa-github fa-fw w3-margin-right w3-large burak-text-color"></i>burakbastem</a></p>
           </div>
         </div>
@@ -300,6 +300,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <b>Icons: </b> Font Awesome by Dave Gandy - <a href="http://fontawesome.io" target="_blank">http://fontawesome.io</a>
       </footer>
 
-</body>
+    </body>
 
-</html>
+    </html>
