- Optimized for mobile browsers.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Burak Bastem</title>
+  <title>Burak Bastem - Personal Website</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- CSS Framework: Powered by w3.css - https://www.w3schools.com/w3css/default.asp -->
@@ -60,28 +60,28 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h2 class="w3-padding-16 burak-text-color"><i class="fa fa-university fa-fw w3-margin-right"></i>Education</h2>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Master of Science, Computer Science and Engineering</b></h5>
-            <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2016 - present</h5>
+            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2016 - present</h5>
             <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
             <p>GPA: 3.68 / 4.00</p>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Bachelor of Science, Computer Engineering</b></h5>
-            <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
+            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
             <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
             <p>GPA: 3.18 / 4.00</p>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Bachelor of Science, Industrial Engineering</b></h5>
-            <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
+            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
             <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
             <p>GPA: 3.18 / 4.00</p>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Track Certificate, Software Engineering</b></h5>
-            <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
+            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
             <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
             <p>GPA: 3.54 / 4.00</p>
             <br>
@@ -92,7 +92,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h2 class="w3-padding-16 burak-text-color"><i class="fa fa-briefcase fa-fw w3-margin-right"></i>Experience</h2>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Research Assistant</b></h5>
-            <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>June 2015 - present</h5>
+            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>June 2015 - present</h5>
             <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Koç University ParCoreLab</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
               <li>Working on a project called TiDA. TiDA provides abstractions for data locality and parallelism.</li>
@@ -103,7 +103,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Teaching Assistant</b></h5>
-            <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2016 - present</h5>
+            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2016 - present</h5>
             <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
               <li>Involved with teaching, supervision and assessment in Computer Architecture, Operating Systems and Parallel Programming courses.</li>
@@ -113,7 +113,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Affiliate</b></h5>
-            <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>July - Sept 2016</h5>
+            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>July - Sept 2016</h5>
             <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Lawrence Berkeley National Laboratory</b>, Berkey, CA, US</h6>
             <ul style="list-style-type: square">
               <li>Worked on GPU execution models and collaborated with Berkeley Lab on GPU acceleration of TiDA.</li>
@@ -123,7 +123,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Engineering Intern</b></h5>
-            <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Aug 2015</h5>
+            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Aug 2015</h5>
             <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Vestel Research and Development</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
               <li>Worked on mobile software development in Android.</li>
@@ -132,7 +132,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Engineering Intern</b></h5>
-            <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>June - Aug 2014</h5>
+            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>June - Aug 2014</h5>
             <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Netaş Telecommunication</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
               <li>Worked on Continuous Delivery (CD). CD allows software to be released any time.</li>
@@ -162,31 +162,31 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <h2 class="w3-padding-16 burak-text-color"><i class="fa fa-trophy fa-fw w3-margin-right"></i>Honors and Awards</h2>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Research Project Scholarship Recipient</b></h5>
-                <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2016 - present</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2016 - present</h5>
                 <h6>Prof. Didem Unat through TÜBİTAK</h6>
                 <hr>
               </div>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Half Merit Scholarship Recipient</b></h5>
-                <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
                 <h6>Koç University, Istanbul, Turkey</h6>
                 <hr>
               </div>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Second Best Senior Project Award</b></h5>
-                <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2016</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2016</h5>
                 <h6>Koç University, Istanbul, Turkey</h6>
                 <hr>
               </div>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Dean's Honor Roll</b></h5>
-                <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Fall 2014, Fall 2015, Spring 2016</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Fall 2014, Fall 2015, Spring 2016</h5>
                 <h6>Koç University, Istanbul, Turkey</h6>
                 <hr>
               </div>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Vehbi Koç Scholar</b></h5>
-                <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Spring 2014, Spring 2015</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Spring 2014, Spring 2015</h5>
                 <h6>Koç University, Istanbul, Turkey</h6>
                 <br>
               </div>
@@ -196,7 +196,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <h2 class="w3-padding-16 burak-text-color"><i class="fa fa-certificate fa-fw w3-margin-right"></i>Activities</h2>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Presenter and Volunteer, BAŞARIM 2017</b></h5>
-                <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2017</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2017</h5>
                 <ul style="list-style-type: square">
                   <li>BAŞARIM is National High Performance Computing Conference of Turkey.</li>
                   <li>Presented a paper and a poster about <a href="#experience">TiDA-acc and SMC.</a></li>
@@ -207,7 +207,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               </div>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Presenter, ICPP 2017</b></h5>
-                <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Aug 2017</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Aug 2017</h5>
                 <ul style="list-style-type: square">
                   <li>Presented <a href="#publications">the ICPP paper.</a></li>
                   <li>Received Certificate of Attendence.</li>
@@ -216,7 +216,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               </div>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Member, Koç University Computer Club</b></h5>
-                <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2013</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2013</h5>
                 <ul style="list-style-type: square">
                   <li>Coordinated and participated in workshops and seminars.</li>
                 </ul>
@@ -224,7 +224,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               </div>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Member, Koç University Marketing Club</b></h5>
-                <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2011</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2011</h5>
                 <ul style="list-style-type: square">
                   <li>Participated in seminars and career talks with top executives of reputable companies.</li>
                   <li>Received BusinessPort Certificate of Attendence.</li>
@@ -244,11 +244,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                 <ul style="list-style-type: square">
                   <li>
                     <p class="w3-show-inline-block">IELTS Academic: 7</p>
-                    <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Nov 2015</h5>
+                    <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Nov 2015</h5>
                   </li>
                   <li>
                     <p class="w3-margin-bottom  w3-show-inline-block">KAPLAN International Certificate of Achievement</p>
-                    <h5 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Summer 2012</h5>
+                    <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Summer 2012</h5>
                     <br>
                     <i class="fa fa-map-marker w3-margin-right burak-text-color"></i>New York City, NY, US
                   </li>
