- Fixed "Publications" heading.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <!-- Publications -->
         <div id="publications" class="w3-container w3-card-4 w3-white w3-text-dark-grey w3-margin-bottom">
-          <h2 style="padding-top:16px"><i class="fa fa-file fa-fw w3-margin-right burak-text-color"></i>Publications</h2>
+          <h2 style="padding-top:16px" class="burak-text-color"><i class="fa fa-file fa-fw w3-margin-right"></i>Publications</h2>
           <h4 style="padding-bottom:16px">Conference Proceedings</h4>
           <div class="w3-container">
             <h5>Burak Bastem, Didem Unat, Weiqun Zhang, Ann Almgren, John Shalf, <b><a href="http://ieeexplore.ieee.org/document/8025291/" target="_blank">“Overlapping Data Transfers with
