- Updated ParCoreLab job details.

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>June 2015 - present</h5>
             <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Koç University ParCoreLab</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
-              <li>Working on a project called TiDA. TiDA provides abstractions for data locality and parallelism.</li>
-              <li>Worked on design and implementation of TiDA C++ API and TiDA-acc, GPU accelerated TiDA.</li>
-              <li>Working on implementation of SMC, a combustion simulation, with TiDA-acc.</li>
+              <li>Working on a project called TiDA which provides abstractions for better computing performance with data locality and parallelism.</li>
+              <li>Worked on design and implementation of TiDA C++ API, TiDA-acc which is GPU accelerated TiDA and TiDA-acc implementation of SMC which is a combustion simulation.</li>
+              <li>Working on design and implementation of TiDA-multigpu which is a multi-process multi-GPU runtime.</li>
             </ul>
             <hr>
           </div>
@@ -126,7 +126,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Aug 2015</h5>
             <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Vestel Research and Development</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
-              <li>Worked on mobile software development in Android.</li>
+              <li>Worked on mobile software development for Android.</li>
             </ul>
             <hr>
           </div>
@@ -135,7 +135,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>June - Aug 2014</h5>
             <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Netaş Telecommunication</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
-              <li>Worked on Continuous Delivery (CD). CD allows software to be released any time.</li>
+              <li>Worked on Continuous Delivery (CD) which allows software to be released any time.</li>
               <li>Worked on integration of static code analysis tools such as PMD, FindBugs and Checkstyle to CD.</li>
             </ul>
             <br>
