--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>June 2015 - present</h5>
             <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Koç University ParCoreLab</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
-              <li>Worked on implementation of TiDA, tiling based multi-threaded programming model for increasing cache performance with data locality and managing parallelism. TiDA achieves up to 2.10x speedup over OpenMP for simple kernels and resulted in publication at ISC’16.</li>
+              <li>Implemented TiDA in C++, tiling based multi-threaded programming model for increasing cache performance with data locality and managing parallelism. TiDA achieves up to 2.10x speedup over OpenMP for simple kernels and resulted in publication at ISC’16.</li>
               <li>Designed and implemented TiDA-acc. TiDA-acc is a tiling based asynchronous GPU programming model which hides transfer latency between CPU and GPU, handles cases where there is no sufficient GPU memory, abstracts GPU programming requirements, and published at ICPP’17.</li>
               <li>Implemented SMC, a combustion simulation consisting of approximately 10,000 lines of code, with TiDA-acc and presented an article as well as a poster about the study at BAŞARIM’17.</li>
               <li>Currently developing tiling based asynchronous multi-process multi-GPU execution model.</li>
@@ -117,8 +117,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>July - Sept 2016</h5>
             <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Lawrence Berkeley National Laboratory</b>, Berkey, CA, US</h6>
             <ul style="list-style-type: square">
-              <li>Studied and analyzed existing GPU execution models.</li>
-              <li>Worked on GPU acceleration of SMC implemented with BoxLib, an Adaptive Mesh Refinement (AMR) framework from Berkeley Lab.</li>
+              <li>Studied existing GPU execution models and SMC implemented with BoxLib, an AMR framework from Berkeley Lab.</li>
+              <li>Started implementing GPU version of SMC.</li>
               <li>Collaborated on TiDA-acc design.</li>
             </ul>
             <hr>
@@ -137,7 +137,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>June - Aug 2014</h5>
             <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Netaş Telecommunication</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
-              <li>Worked on integration ofstatic code analysis toolssuch as PMD, FindBugs and Checkstyle to continuous delivery project.</li>
+              <li>Analyzed and configured static code analysis tools (PMD, FindBugs and Checkstyle) which are integrated to continuous delivery project.</li>
             </ul>
             <br>
           </div>
